# ComicViewer

./: .gitignore  DailyDilbertViewer.sln  README.md
ComicReceiverLib/: ComicReceiverLib.csproj  ImageHandler.cs  MetaFileHandler.cs
ComicReceiverLib/Properties/: AssemblyInfo.cs
ComicReceiverLib/tests/: testClass.cs
DailyDilbertViewer/: DailyDilbertViewer.csproj  DilbertReceiver.cs  DilbertViewer.cs  Form1.Designer.cs  Form1.cs  ImageHandler.cs  MetaFileHandler.cs  Program.cs  Serialisazion.cs
DailyDilbertViewer/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
UnitTest/: UnitTest.csproj  UnitTest1.cs
UnitTest/Properties/: AssemblyInfo.cs
cpp_src/: CMakeLists.txt  html_operations.cpp  html_operations.hpp  main.cpp
